# guppy

./: .gitignore  bootstrap.sh
.github/: FUNDING.yml
log/: latest_build
src/can_motor_control/: package.xml
src/can_motor_control/src/: can_throttle_subscriber.cpp
src/chassis_control/: setup.py
src/chassis_control/chassis_control/: sim_publisher.py  thrust_vectoring.py
src/guppy/: CMakeLists.txt  package.xml
src/guppy_bringup/: CMakeLists.txt  package.xml
src/guppy_can/: CMakeLists.txt  README.md  package.xml
src/guppy_can/src/: can_throttle_subscriber.cpp  throttle_publisher.cpp
src/guppy_control/guppy_control_arm/: CMakeLists.txt  package.xml
src/guppy_control/guppy_control_chassis/: package.xml  setup.cfg  setup.py
src/guppy_control/guppy_control_chassis/chassis_control/: thrust_vectoring.py
src/guppy_control/guppy_control_torpedo/: CMakeLists.txt  package.xml
src/guppy_description/: CMakeLists.txt  package.xml
src/guppy_localization/: CMakeLists.txt  package.xml
src/guppy_moveit/: CMakeLists.txt  package.xml
src/guppy_msgs/: CMakeLists.txt  package.xml
src/guppy_nav2/: CMakeLists.txt  package.xml
src/guppy_safety/: CMakeLists.txt  package.xml
src/guppy_state/: CMakeLists.txt  package.xml
src/guppy_tasks/: package.xml  setup.cfg  setup.py
src/guppy_teleop/: package.xml  setup.cfg  setup.py
src/guppy_teleop/guppy_teleop/: translator.py
src/guppy_teleop/teleop_controller/: raw_controller.py
src/guppy_vision/: CMakeLists.txt  package.xml
src/teleop_controller/: package.xml
src/teleop_controller/teleop_controller/: translator.py
