<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guppy_bringup</name>
  <version>0.0.0</version>
  <description>Bringup and launch tasks for the 2026 Guppy AUV. Should contain no nodes, actions, or services but only shell scripts and launch files.</description>
  <maintainer email="cole.b.wilson@wsu.edu">Palouse RoboSub</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
