<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guppy_nav2</name>
  <version>0.0.0</version>
  <description>Nav2 configuration files and behavior trees for the 2026 Guppy AUV. This includes paths, and task ordering/strategy.</description>
  <maintainer email="colewilson.main@gmail.com">Palouse RoboSub</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
